# garnet-ila

./: CMakeLists.txt  README.md
app/: main.cc
include/garnet/: garnet_top.h  memory_core_config.h
misc/: memory_core_instr_config_reg.cc.in  memory_core_macro_config_reg.h.in  memory_core_macro_io_port.h.in  memory_core_spec_config_reg.txt  memory_core_spec_io_port.txt  memory_core_state_config_reg.cc.in  memory_core_state_io_port.cc.in
qed/: decode_sig.txt  memory_core_ila.v
script/: code_gen_helper.py
src/: garnet_top.cc  memory_core_instr_config_reg.cc  memory_core_state_config_reg.cc  memory_core_state_io_port.cc  memory_core_top.cc
